# AK2

./: calculator.cpp  calculator.h
lab2/: CMakeLists.txt  Makefile  README.md  add.cpp  add.h  baloon.cpp  calculator.cpp  calculator.h  main.cpp
lab2/ninja/: build.ninja  rules.ninja
lab3/: Lab3.cpp  Readme.md
lab4/: lab4.docx
lab5/: Readme.md  lab5.docx
patches/: 0001-fix-truncation-error.patch  0002-formatting-use-tabs-instead-of-spaces.patch
